<resources>
    <string name="app_name">BioFit</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_log_in">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_log_in_short">Log in short</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="reset">Reset</string>
    <string name="steps">Steps</string>

    <!--Strings added by John for user profile and running activities -->
    <string name="user_name">John Daley</string>
    <string name="profile_Pic">Users profile pic</string>
    <string name="button_label_sleep">Sleep Tracker</string>
    <string name="button_label_heart_rate">Heart Rate</string>
    <string name="button_label_run_tracker">Go Running</string>
    <string name="button_label_activity_level">Activity Level</string>
    <string name="text_view_label_running_hours">Hours</string>
    <string name="text_view_label_running_min">Minutes</string>
    <string name="profile_edit_button">Edit</string>
    <string name="profile_save_button">Save</string>
    <string name="invalid_empty_string">This field can\'t be empty</string>
    <string name="date_format_dd_mm_yyyy">Please enter a valid date: dd/mm/yyyy</string>
    <string name="title_activity_account_settings">AccountSettingsActivity</string>


</resources>
